--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     },
     "autoload-dev": {
         "classmap": [
-            "tests/",
-            "database/"
+            "tests/"
         ]
     },
     "scripts": {
